# srb

./: .env  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
bot/: __main__.py  config.py  core.py  fsm.py  inline_keyboards.py  keyboards.py  middlewares.py  models.py  ui.py
services/bot/: .dockerignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
services/bot/bot/: __main__.py  cliche.py  inline_keyboards.py  keyboards.py  middlewares.py
services/daemon/: Dockerfile  pyproject.toml
services/daemon/daemon/: __main__.py
services/notification-daemon/: Makefile  pyproject.toml
services/notification-daemon/daemon/: __main__.py
srblib/: Dockerfile  README.md  pyproject.toml
srblib/srblib/: config.py  core.py
srblib/srblib/db/: db.py  models.py
