[project]
name = "srblib"
version = ""
description = ""
authors = [
    {name = "jieggii", email = "jieggii.contact@gmail.com"},
]
dependencies = [
    "beanie>=1.11.0",
    "motor>=2.5.1",
    "python-dateutil>=2.8.2",
    "betterconf>=2.6.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
