[tool.poetry]
name = "srblib"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
beanie = "^1.11.0"
python-dateutil = "^2.8.2"
betterconf = "^2.6.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[tool.poetry-exec-plugin.commands]
fmt = "poetry run isort srblib/; poetry run black srblib/"

[tool.black]
line-length = 120
target-version = ['py310']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
