[tool.poetry]
name = "daemon"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
aiohttp = "^3.8.1"
srblib = {path = "../../srblib", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
