[project]
name = ""
version = ""
description = ""
authors = [
    {name = "jieggii", email = "jieggii.contact@gmail.com"},
]
dependencies = [
    "loguru>=0.6.0",
    "aiohttp>=3.8.1",
    ]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "-e file:///home/jieggii/code/proj/subscriptions-reminder-bot/srblib#egg=srblib",
    "black>=22.3.0",
    "isort>=5.10.1",
]

[tool.pdm.scripts]
start.cmd = "python -m daemon"
start.env_file = "../../.env"
fmt.shell = "isort daemon/; black daemon/"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
